styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;


@layer base {
  :root {
    --background: 220 14% 96%;
    --contentBackground: 0 0% 100%;
    --borderColor: 0 0% 0%;
    --altGray: 220 14% 96%;
    --altGrayDarker: 220 14% 90%;
  }
  .dark {
    /* --background: 240.5 5.9% 10%; */
    --background: 200 6.7% 17.6%;
    --contentBackground: 60 3.23% 12.16%;
    /* --contentBackground: 217.2 32.6% 17.5%; */
    --borderColor: 0 0% 100%;
    --altGray: 215.3 25% 26.7%;
    --altGrayDarker: 217.2 32.6% 17.5%;
  }
}


.header-container {
    width: 100vw;
    /* background-color: rgb(149, 47, 47); */
    background-color: #b30600;
    display: flex;
    justify-content: center;
    z-index: 1;
}

.header-box {
    display: flex;
    align-items: center;
    flex-direction: row;
    width: 70%;
    color: white;
    padding-bottom: 1rem;
    padding-top: 1rem;
    justify-content: space-between;
}
@media (max-width: 1024px) {
    .header-box {
      width: 100%;
      padding-left: 1rem;
      padding-right: 1rem;
    }
  }
.logo {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1rem
}


.sidebar {
  position: fixed;
  top: 4rem;  /* this bring the sidebar down so we can still just use the header title */
  /* works for almost every device- but very small width 280px will merge header/sidebar - may
  need to use some sort of calculation function for this if i need to be that precise */
  left: 0;
  width: 200px;
  height: 100vh;
  /* background-color: rgb(149, 47, 47); */
  /* background-color: #e10600; */
  background-color: #b30600;
  padding: 1rem;
  z-index: 10;
  /* border-top: 5px white dotted; */
}

.sidebar-logo {
  margin-right: 0.5rem;
}

.sidebar-title {
  font-size: 1.5rem;
  font-weight: bold;
}

.sidebar-link-block {
  display: flex;
  flex-direction: row;
  align-items: center;
  text-align: center;
  transition: background-color 0.3s ease-in-out;
  padding: 0.25rem;
  border-radius: 0.5rem;
  width: 100%;
}

.sidebar-link-block:hover {
  background-color: rgba(245, 164, 164, 0.2);
  border-radius: 0.5rem;
}


.sidebar-links a {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  text-align: left;
  color: white;
  text-decoration: none;
  font-size: 1.25rem;
  position: relative;
}

.sidebar-link-box {
  padding-right: 0.5rem;
}

.sidebar-link-icon {
  fill: white;
}

.sidebar-close {
  display: flex;
  font-size: 1.25rem;
  justify-content: center;
}

.btn.btn-primary {
  margin-top: 1rem;
}


@media screen and (max-width: 640px) {
  .main {
    padding: 0;
  }
}

/* standings page */
.standings-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 70%;
  margin-top: 2rem;
  margin-bottom: 2rem;
  text-align: center;
}
@media (max-width: 1024px) {
  .standings-container {
    width: 100%;
  }
}

.podium-container {
  display: flex;
  flex-wrap: wrap;
  width: 50%;
  justify-content: center;
  position: relative;
  align-content: center;
}
.podium_first {
  position: absolute;
  top: 25%;
  left: 50%;
  transform: translate(-50%, -100%);
  box-sizing: border-box;
}
.podium-first-container {
  position: absolute;
  top: 240px; /* Adjust this value to position the image as desired */
  left: calc(50% - 40px); /* Adjust this value to position the image horizontally */
  display: flex;
  justify-content: center;
}
.podium-second-container {
  position: absolute;
  top: 250px; /* Adjust this value to position the image as desired */
  left: calc(50% - 135px); /* Adjust this value to position the image horizontally */
  display: flex;
  justify-content: center;
}
.podium-third-container {
  position: absolute;
  top: 275px; /* Adjust this value to position the image as desired */
  left: calc(50% + 60px); /* Adjust this value to position the image horizontally */
  display: flex;
  justify-content: center;
}

@media (max-width: 767px) {
  .podium-container {
    width: 100%;
  }
  .podium-first-container {
    top: 45px;
  }
  .podium-second-container {
    top: 65px;
  }
  .podium-third-container {
    top: 88px;
  }
}
.driver-podium-container {
  display: flex;
  justify-content: center;
  position: relative;
  align-content: center;
  flex-wrap: wrap;
  height: 50%;
}
.driver-podium-first-container {
  position: absolute;
  top: 200px; /* Adjust this value to position the image as desired */
  left: calc(50% - 50px); /* Adjust this value to position the image horizontally */
  display: flex;
  justify-content: center;
}
.driver-podium-second-container {
  position: absolute;
  top: 220px; /* Adjust this value to position the image as desired */
  left: calc(50% - 145px); /* Adjust this value to position the image horizontally */
  display: flex;
  justify-content: center;
}
.driver-podium-third-container {
  position: absolute;
  top: 240px; /* Adjust this value to position the image as desired */
  left: calc(50% + 48px); /* Adjust this value to position the image horizontally */
  display: flex;
  justify-content: center;
}

@media (max-width: 767px) {
  .driver-podium-container {
    width: 100%;
  }
  .driver-podium-first-container {
    top: 25px;
  }
  .driver-podium-second-container {
    top: 45px;
  }
  .driver-podium-third-container {
    top: 65px;
  }
}


.titles-block {
  display: flex;
  flex-direction: row;
}
/* tracks page */
.tracks-container {
  display: flex;
  flex-direction: column;
  margin-top: 1rem;
  justify-content: left;
  width: 100%;
  margin-bottom: 2rem;
  text-align: center;
}
.tracks-title-block {
  height: 100%;
}
.page-title {
  display: flex;
  justify-content: center;
  font-weight: 700;
  color: #FF2800;
  font-size: 2rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.track-list-container {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  padding-top: 0.75rem;
}




@keyframes moveRightAnimation {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(calc(100vw - 200px)); /* Assuming image width is 200px */
  }
}



/* Tailwind Styles */

.app {
  @apply relative z-10 flex justify-center items-center flex-col w-full ;
}

.body {
  @apply bg-gray-100 dark:bg-red-500
}

.podium_first {
  @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-2/3;
}
.podium_second  {
  @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-2/3;
}
.podium_third {
  @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-2/3;
}
.driver-podium_first {
  @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-2/3;
}
.driver-podium_second  {
  @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-2/3;
}
.driver-podium_third {
  @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-2/3;
}

